name:                hiper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hiper#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/loopthrough/hiper

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
                base == 4.*
              , hspec-core == 2.4.3
              , hspec-discover == 2.4.3
              , hspec-expectations == 0.8.2.*
              , transformers >= 0.2.2.0
              , QuickCheck >= 2.5.1
              , HUnit >= 1.2.5
              , call-stack
              , hspec
              , directory
              , stringbuilder
              , hspec-meta >= 2.3.2
  default-language: Haskell2010
