name:                spockexample
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/spock-example#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable spockexample
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , mtl
                     , hiper
                     , text
  ghc-options:
              -O2
              -Wall
              -fwarn-tabs
              -funbox-strict-fields
              -Werror
